# learn-wgpu

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: azure-static-web-apps-agreeable-dune-08facd403.yml  azure-static-web-apps-orange-sand-08e3a2703.yml
src/: app.rs  camera.rs  depth_pass.rs  file_reader.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  state.rs  texture.rs  uniform.rs  vertex.rs
src/shaders/: basic.frag  basic.vert  basic.wgsl  challenge.frag  challenge.vert  depth_texture.wgsl  shader.wgsl
www/: index.js  package.json  webpack.config.js
