[package]
name = "learn-wgpu"
version = "0.1.0"
authors = ["Hugo Woodiwiss <hj.woodiwiss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["jpeg", "png"] }
winit = { version = "0.25.0", features = [ "web-sys" ] }
cgmath = "0.18"
env_logger = "0.9.0"
log = "0.4"
futures = "0.3"
wgpu = "0.10.1"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
anyhow = "1.0" 
tobj = { git = "https://github.com/hwoodiwiss/tobj", branch = "add-async-obj-load-buf", features = ["async"]}
wasm-bindgen = "0.2"
js-sys = "0.3.50"
web-sys = { version = "0.3.50", features = ["Response"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"



[lib]
crate-type = ["cdylib", "rlib"]